# mlcstar

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: defaults.yaml
mlcstar/: make_data.py  utils.py
mlcstar/R/: comorbidity.r  elixhauser.r
mlcstar/data/: build_patient_info.py  collectors.py  datasets.py  filters.py  mapper.py  mappings.py  preprocessing.py
mlcstar/evaluation/: predictive_performance.py  utils.py
mlcstar/training/: train.py
scripts/: run_pipeline.py
