[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mlcstar"
version = "0.0.1"
description = "mlcstar — standalone EBM clinical prediction pipeline"
authors = [
  { name = "Andreas Skov Millarch", email = "andreasmillarch@gmail.com" },
]
requires-python = ">=3.9"
#dependencies = [
#  "pandas",
#  "numpy",
#  "scikit-learn",
##  "pyarrow",
#  "interpret",
#  "azureml-core",
#  "azure-ai-ml",
#  "azure-storage-blob",
#  "azure-identity",
#  "mltable",
#  "pyyaml",
#  "rich",
#  "matplotlib",
#  "seaborn",
#  "scipy",
#]
[tool.setuptools.packages.find]
where = ["."]
include = ["mlcstar*"]